--- a/04-practice-project/package.json
+++ b/04-practice-project/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "styled-component": "^2.8.0",
+    "styled-components": "^6.0.0-rc.2"
   },
   "scripts": {
     "start": "react-scripts start",
